Fixed margin dark mode button

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -1026,7 +1026,7 @@ input[type=range]:focus::-ms-fill-upper {
 	width: 50px;
 	height: 23px;
 	float: right;
-	margin-top: 3px;
+	margin-top: 0.3rem;
 	margin-bottom: 0;
 }
 
